tictactoe_app 2/deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: namespace2 
spec:
  selector: 
    app: mi-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4173
      nodePort: 30080
  type: NodePort
